--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
+    id 'com.google.secrets_gradle_plugin' version '0.4'
 }
 
 android {
@@ -69,4 +72,14 @@ dependencies {
 
     implementation "com.github.skydoves:landscapist-glide:1.5.2"
 
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation('com.squareup.retrofit2:converter-gson:2.9.0')
+    implementation("com.google.dagger:hilt-android:2.38.1")
+    kapt("com.google.dagger:hilt-android-compiler:2.38.1")
+
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-alpha06")
+}
+
+kapt {
+    correctErrorTypes = true
 }
