--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,7 +77,7 @@ dependencies {
     implementation("com.google.dagger:hilt-android:2.38.1")
     kapt("com.google.dagger:hilt-android-compiler:2.38.1")
 
-    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-alpha06")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1")
 }
 
 kapt {
