--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1'
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation "androidx.navigation:navigation-compose:2.5.1"
 
     implementation "com.github.skydoves:landscapist-glide:1.5.2"
 
