--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,13 @@ dependencies {
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1")
+
+    //Room
+    implementation "androidx.room:room-runtime:2.4.3"
+    kapt "androidx.room:room-compiler:2.4.3"
+
+    //Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:2.4.3"
 }
 
 kapt {
