--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,12 +11,18 @@ android {
 
     defaultConfig {
         applicationId "com.hasanmuslemani.tvtracker"
-        minSdk 23
-        targetSdk 31
-        versionCode 1
-        versionName "1.0"
+        minSdk 26
+        compileSdk 33
+        targetSdk 33
+        versionCode 2
+        versionName "1.0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file("local.properties").newDataInputStream())
+
+        buildConfigField "String", "API_KEY", "\"${properties.getProperty("API_KEY")}\""
     }
 
     buildTypes {
